# rc-voting

./: .dockerignore  .env  .gitignore  .rust-analyzer.json  .versionrc.json  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.musl  README.md  colors.txt  package-lock.json  package.json  tailwind.config.js
.github/workflows/: rust.yml
db/: db.sql
end2end/tests/: example.spec.ts
migrations/2024-01-31-152134_setup_tables/: down.sql  up.sql
src/: app.rs  context.rs  db.rs  graphql.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs  session.rs  user_data.rs
src/api/: login.rs  mod.rs  voting.rs
src/app/: elections.rs  items.rs  login.rs  mod.rs  voting.rs
