[package]
name = "aem_voting"
version = "0.0.1"
publish = false
edition = "2021"
license = "MIT/Apache-2.0"

[profile.release]
# strip = true
codegen-units = 1
opt-level = "z"
lto = true

[dependencies]
ahash = { version = "0.8.7", default-features = false }
anyhow = "1.0.79"
bytes = { version = "1.4.0", default-features = false }
chrono = { version = "0.4.31", features = ["serde", "clock"], default-features = false }
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
diesel = { version = "2.0.2", features = ["r2d2", "sqlite", "serde_json"], default-features = false }
dotenvy = "0.15.6"
env_logger = { version = "0.11", default-features = false }
futures-util = { version = "0.3.30", default-features = false }
futures = { version = "0.3", default-features = false }
hashbrown = { version = "0.14.3", features = ["serde", "ahash"], default-features = false }
hex = { version = "0.4.3", default-features = false }
juniper_graphql_ws = "0.3.0"
juniper = { git = "https://github.com/graphql-rust/juniper", features = ["chrono", "bson"], default-features = false }
juniper_axum = { git = "https://github.com/graphql-rust/juniper", features = ["subscriptions"] }
log = "0.4"
pbkdf2 = { version = "0.12", features = ["simple", "std"] }
pretty_env_logger = "0.5.0"
r2d2 = "0.8.10"
rand_core = {version ="0.6", features=["std"]}
ring = { version = "0.17", default-features = false }
serde_json = { version = "1.0.89", default-features = false }
serde = { version = "1.0.95", default-features = false }
thiserror = "1.0.56"
tokio-stream = { version = "0.1.14", default-features = false }
tokio = { version = "1.21", features = ["bytes", "signal", "rt-multi-thread"] }
uuid = { version = "1.2.2", features = ["v4"], default-features = false }
axum = { version = "0.7.4", features = ["ws", "http2", "multipart", "macros"] }
tracing-subscriber = "0.3.18"
axum-extra = { version = "0.9.2", features = ["cookie", "json-deserializer"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["compression-gzip", "compression-zstd", "compression-deflate", "full"] }
itertools = "0.12"
rcir = "0.3"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"
