[package]
name = "rc-voting-leptos"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ahash = { version = "0.8.7", default-features = false, optional = true }
anyhow = "1.0"
axum = { version = "0.7", features = ["ws", "http2", "multipart", "macros"], optional = true }
bytes = { version = "1.4.0", default-features = false, optional = true }
chrono = { version = "0.4.31", features = ["serde", "clock"], default-features = false, optional = true }
console_error_panic_hook = "0.1"
diesel_migrations = { version = "2.0.0", features = ["sqlite"], optional = true }
diesel = { version = "2.0.2", features = ["r2d2", "sqlite", "serde_json"], default-features = false, optional = true }
dotenvy = { version = "0.15.6", optional = true }
env_logger = { version = "0.11", default-features = false, optional = true }
futures-util = { version = "0.3.30", default-features = false, optional = true }
futures = { version = "0.3", default-features = false, optional = true }
hashbrown = { version = "0.14.3", features = ["serde", "ahash"], default-features = false, optional = true }
hex = { version = "0.4.3", default-features = false, optional = true }
juniper_graphql_ws = { version = "0.3.0", optional = true}
juniper = { git = "https://github.com/graphql-rust/juniper", features = ["chrono", "bson"], default-features = false, optional = true }
juniper_axum = { git = "https://github.com/graphql-rust/juniper", features = ["subscriptions"], optional = true }
leptos = { version = "0.6", features = ["nightly"] }
leptos_axum = { version = "0.6", optional = true }
leptos_meta = { version = "0.6", features = ["nightly"] }
leptos_router = { version = "0.6", features = ["nightly"] }
log = { version = "0.4", optional = true}
pbkdf2 = { version = "0.12", features = ["simple", "std"], optional = true }
r2d2 = {version = "0.8.10", optional = true}
rand_core = {version ="0.6", features=["std"], optional = true}
serde_json = { version = "1.0.89", default-features = false, optional = true }
serde = { version = "1.0.95", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
tokio-stream = { version = "0.1.14", default-features = false, optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs", "compression-gzip", "compression-zstd", "compression-deflate", "full"], optional = true }
tracing-subscriber = { version = "0.3.18", optional = true }
wasm-bindgen = "=0.2.89"
ring = { version = "0.17", default-features = false, optional = true}
thiserror = "1"
itertools = { version = "0.12", optional = true}
axum-extra = { version = "0.9.2", features = ["cookie", "json-deserializer"], optional = true }
rcir = { version = "0.3", optional = true}
cookie = { version = "0.18.0", optional = true}
tracing = { version = "0.1", optional = true }
uuid = { version = "1.2.2", features = ["v4"], default-features = false, optional = true }
http = "1"

[features]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
    "dep:ahash",
    "dep:bytes",
    "dep:chrono",
    "dep:diesel_migrations",
    "dep:diesel",
    "dep:dotenvy",
    "dep:env_logger",
    "dep:futures-util",
    "dep:futures",
    "dep:hashbrown",
    "dep:hex",
    "dep:itertools",
    "dep:juniper_graphql_ws",
    "dep:juniper_axum",
    "dep:log",
    "dep:r2d2",
    "dep:rand_core",
    "dep:serde_json",
    "dep:tokio-stream",
    "dep:ring",
    "dep:tracing-subscriber",
    "dep:rcir",
    "dep:cookie",
    "dep:pbkdf2",
    "dep:tracing",
    "dep:uuid",
    "dep:axum",
    "dep:axum-extra",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:leptos_axum",
    "dep:juniper",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:tracing",
]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "rc-voting-leptos"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/main.scss"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "0.0.0.0:3232"

# The port to use for automatic reload monitoring
reload-port = 3233

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

tailwind-input-file = "style/tailwind.css"
tailwind-config-file = "tailwind.config.js"
#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# Set by cargo-leptos watch when building with that tool. Controls whether autoreload JS will be included in the head
watch = false

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"
